# learnwgpu

./: Cargo.toml  index.html
res/: fox.mtl
src/: camera.rs  lib.rs  main.rs  minecraft.rs  model.rs  resources.rs  shader.wgsl  texture.rs
