[package]
name = "learnwgpu"
version = "0.1.0"
edition = "2024"

[build-dependencies]
anyhow = "1.0.100"
fs_extra = "1.3.0"
glob = "0.3.3"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = [ "derive" ] }
cgmath = "0.18.0"
env_logger = "0.11.8"
gltf = "1.4.1"
instant = "0.1.13"
log = "0.4.29"
num_enum = "0.7.5"
pollster = "0.4.0"
tobj = { version = "4.0.3", default-features = false, features = ["async"] }
wgpu = "27.0.1"
winit = { version = "0.30.12", features = ["android-native-activity"] }

[dependencies.image]
version = "0.25.9"
default-features = false
features = ["png", "jpeg"]

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "27.0.1", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "Location",
]}
reqwest = "0.12.26"
instant = { version = "0.1.13", features = [ "wasm-bindgen" ] }

[[bin]]
name = "learnwgpu"
path = "src/main.rs"
